# gpt-image-2-skill

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dist-workspace.toml  justfile  pyproject.toml  setup.py
.github/workflows/: npm-publish.yml  pages-deploy.yml  post-release-verify.yml  release-candidate.yml  release.yml  tauri-app-release.yml
apps/gpt-image-2-app/: .impeccable.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/gpt-image-2-app/contracts/: mock-data.json
apps/gpt-image-2-app/src/: App.tsx  index.css  main.tsx  runtime-contract.ts  vite-env.d.ts
apps/gpt-image-2-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/gpt-image-2-app/src-tauri/capabilities/: default.json
apps/gpt-image-2-app/src-tauri/icons/: icon.icns
apps/gpt-image-2-app/src-tauri/src/: direct_commands.rs  dropped_files.rs  export_commands.rs  export_names.rs  file_access.rs  history_commands.rs  job_commands.rs  lib.rs  main.rs  queue_commands.rs  queue_workers.rs  retry_commands.rs  settings_commands.rs  support.rs  tests.rs  types.rs
apps/gpt-image-2-app/src-tauri/src/job_execution/: batch_payloads.rs  edit_runner.rs  job_paths.rs  job_records.rs  provider_capabilities.rs  queue_events.rs  streaming.rs
apps/gpt-image-2-app/src/components/: command-palette.tsx  icon.tsx  provider-logo.tsx  tweaks-panel.tsx
apps/gpt-image-2-app/src/components/legacy/: classic-edit-canvas-panel.tsx  classic-edit-drop-layout.tsx  classic-edit-reference-panel.tsx  classic-edit-reference-tile.tsx  classic-edit-settings-panel.tsx  classic-edit-shared.ts  classic-edit.tsx  classic-generate.tsx  classic-history.tsx  classic-shell.tsx  use-classic-edit-outputs.ts  use-classic-provider-selection.ts
apps/gpt-image-2-app/src/components/shell/: screens.ts  sidebar.tsx  top-nav.tsx  window-chrome.tsx
apps/gpt-image-2-app/src/components/ui/: badge.tsx  button.tsx  card.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  empty.tsx  field.tsx  image-context-menu.tsx  image-hover-toolbar.tsx  input.tsx  popover.tsx  quick-look.tsx  reveal-image.tsx  segmented.tsx  select.tsx  source-chip.tsx  spinner.tsx  status-dot.tsx  text-selection-context-menu.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
apps/gpt-image-2-app/src/hooks/: use-config.ts  use-confirm.tsx  use-disable-webview-contextmenu.ts  use-image-ingest.ts  use-image-shortcuts.ts  use-job-events.ts  use-job-notifications.tsx  use-jobs.ts  use-prompt-templates.ts  use-reduced-motion.ts  use-shortcuts.ts  use-tweaks.test.ts  use-tweaks.ts
apps/gpt-image-2-app/src/lib/: api.ts  app-updater.ts  credential-display.test.ts  credential-display.ts  drafts.test.ts  drafts.ts  field-context.ts  format.ts  image-options.ts  job-export.test.ts  job-export.ts  job-feedback.ts  job-navigation.ts  job-outputs.ts  prompt-templates.test.ts  prompt-templates.ts  provider-capabilities.ts  providers.test.ts  providers.ts  runtime-copy.ts  storage-validation.test.ts  storage-validation.ts  system-notifications.test.ts  system-notifications.ts  theme-presets.ts  types.ts  user-actions.ts  zip.ts
crates/gpt-image-2-core/: Cargo.toml
crates/gpt-image-2-core/src/: auth.rs  auth_types.rs  cli_types.rs  config_commands.rs  config_io.rs  config_types.rs  constants.rs  credentials.rs  errors.rs  history_commands.rs  history_db.rs  history_list.rs  image_commands.rs  image_requests.rs  json_events.rs  lib.rs  network_safety.rs  paths.rs  provider_selection.rs  provider_types.rs  request_commands.rs  request_payloads.rs  runtime_image_args.rs  runtime_request_types.rs  storage_config.rs  tests.rs  transparent.rs  util.rs
crates/gpt-image-2-core/src/auth/: http.rs  inspect.rs  json_helpers.rs  jwt.rs  persistence.rs  refresh.rs  state.rs
crates/gpt-image-2-core/src/image_requests/: codex.rs  image_sources.rs  openai.rs  output.rs  retry.rs  summary.rs
crates/gpt-image-2-core/src/notifications/: dispatch.rs  email.rs  job.rs  mod.rs  payload.rs  redaction.rs  secrets.rs  types.rs  webhook.rs
crates/gpt-image-2-core/src/storage/: history.rs  mod.rs  orchestrator.rs  redaction.rs  secrets.rs  test_target.rs  types.rs  util.rs
crates/gpt-image-2-core/src/storage/backends/: baidu.rs  http.rs  local.rs  mod.rs  pan123.rs  s3.rs  sftp.rs  webdav.rs
crates/gpt-image-2-core/src/tests/: config_provider.rs  history_storage.rs  image_requests.rs  network_safety.rs  notification_delivery.rs  notifications.rs  storage_config.rs
crates/gpt-image-2-core/src/transparent/: color.rs  commands.rs  extract.rs  image_io.rs  tests.rs  types.rs  verify.rs
crates/gpt-image-2-core/src/transparent/commands/: command_handlers.rs  source_generation.rs
crates/gpt-image-2-core/src/transparent/verify/: analysis.rs  verification.rs
crates/gpt-image-2-skill/: Cargo.toml
crates/gpt-image-2-skill/src/: lib.rs
crates/gpt-image-2-web/: Cargo.toml
crates/gpt-image-2-web/src/: config_api.rs  error.rs  file_api.rs  history_api.rs  job_execution.rs  main.rs  provider_config.rs  queue_api.rs  queue_workers.rs  retry_api.rs  server.rs  support.rs  types.rs
crates/gpt-image-2-web/src/job_execution/: batch_payloads.rs  edit_runner.rs  generate_runner.rs  job_paths.rs  job_records.rs  provider_capabilities.rs  queue_events.rs  streaming.rs
docs/: docker-web.md  rust-release-distribution-design.md  tauri-release.md
scripts/: smoke_skill_install.cjs  smoke_skill_install.py  sync_skill_bundle.py
scripts/release/: configure-npm-trust.sh  generate-tauri-updater-manifest.mjs  patch-release-workflow.mjs  prepare.sh  publish.sh
skills/gpt-image-2-skill/: SKILL.md
skills/gpt-image-2-skill/agents/: openai.yaml
skills/gpt-image-2-skill/references/: json-output.md  providers.md  sizes-and-formats.md  transparent-png.md  troubleshooting.md
skills/gpt-image-2-skill/scripts/: gpt_image_2_skill.cjs  gpt_image_2_skill.py  selftest.cjs  selftest.py
src/codex_auth_imagegen/: cli.py
tests/: test_cli.py
workers/gpt-image-2-relay/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
workers/gpt-image-2-relay/src/: index.test.ts  index.ts
(+123 files in other folders)
