[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-image-2-skill"
version = "0.2.0"
description = "Agent-first CLI and skill runtime for GPT Image 2 through OpenAI API keys or Codex auth.json."
requires-python = ">=3.11"
authors = [
  { name = "Wangnov" }
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Wangnov/gpt-image-2-skill"
Repository = "https://github.com/Wangnov/gpt-image-2-skill"

[project.scripts]
gpt-image-2-skill = "codex_auth_imagegen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
