[package]
name = "gpt-image-2-core"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Shared runtime, config, provider, and history core for GPT Image 2."

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
keyring = "3.6.3"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png", "webp"] }
lettre = { version = "0.11.21", default-features = false, features = ["builder", "hostname", "pool", "ring", "rustls", "smtp-transport", "webpki-roots"] }
mime_guess = "2.0.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "charset", "http2", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"
