[package]
name = "gpt-image-2-skill"
version = "0.2.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Agent-first GPT Image 2 CLI and installable skill runtime."
readme = "../../README.md"

[dependencies]
gpt-image-2-core = { path = "../gpt-image-2-core", version = "0.2.6" }

[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.wix]
upgrade-guid = "B3C143C7-8E3F-4268-B986-0C948A6142D5"
path-guid = "1A4B5434-6487-464F-B703-DA39450EFA34"
license = false
eula = false
