[package]
name = "gpt-image-2-web"
version = "0.3.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Self-hosted Docker/Web server for GPT Image 2."

[package.metadata.dist]
dist = false

[dependencies]
axum = "0.8.7"
gpt-image-2-core = { path = "../gpt-image-2-core", version = "0.3.5" }
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.7", features = ["fs"] }
