[package]
name = "gpt-image-2-app"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Tauri desktop app for GPT Image 2."
publish = false

[lib]
name = "gpt_image_2_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
gpt-image-2-core = { path = "../../../crates/gpt-image-2-core", version = "0.3.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-single-instance = "2.4.1"
