[package]
name = "gpt-image-2-app"
version = "0.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Tauri desktop app for GPT Image 2."
publish = false

[lib]
name = "gpt_image_2_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
gpt-image-2-core = { path = "../../../crates/gpt-image-2-core", version = "0.5.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.0.0", features = ["protocol-asset", "image-png"] }
# Generic image decoder so `copy_image_to_clipboard` works on JPEG/WEBP/GIF
# outputs too — `tauri::image::Image::from_bytes` only handles PNG/ICO under
# the enabled feature set.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-drag = "2"
tauri-plugin-notification = "2.0.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-updater = "2.10.1"
